--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Howlstagram</string>
-    <string name="facebook_app_id">873009302900995</string>
-    <string name="fb_login_protocol_scheme">fb873009302900995</string>
+    <string name="app_name">MLinstagram</string>
+    <string name="facebook_app_id">517918922197499</string>
+    <string name="fb_login_protocol_scheme">fb517918922197499</string>
 
     <!-- Sign In -->
     <string name="email">Email</string>
